[package]
name = "chat"
version = "0.1.0"
edition.workspace = true
publish = false

[dependencies]
nestrs-core.workspace = true
nestrs-http.workspace = true
nestrs-ws.workspace = true
nestrs-health.workspace = true
nestrs-telemetry = { workspace = true, features = ["http"] }
serde.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true

[dev-dependencies]
nestrs-testing = { workspace = true, features = ["telemetry"] }
futures-util.workspace = true
tokio-tungstenite = "0.27"
serde_json.workspace = true
