[package]
name = "db"
version = "0.1.0"
edition.workspace = true
publish = false

[dependencies]
sea-orm-migration.workspace = true
sea-orm.workspace = true
uuid.workspace = true
anyhow.workspace = true
tokio.workspace = true
fake.workspace = true

[dev-dependencies]
nestrs-testing = { workspace = true, features = ["orm"] }
