[package]
name = "mcp"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
nestrs-core.workspace = true
nestrs-config.workspace = true
nestrs-mcp.workspace = true
nestrs-health.workspace = true
nestrs-http.workspace = true
nestrs-middleware.workspace = true
nestrs-server-timing.workspace = true
nestrs-opentelemetry = { workspace = true, features = ["http"] }
rmcp.workspace = true
poem.workspace = true
tokio.workspace = true
tracing.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
async-trait.workspace = true
validator.workspace = true
reqwest.workspace = true

[dev-dependencies]
nestrs-testing = { workspace = true, features = ["opentelemetry"] }
serde_json.workspace = true
