[package]
name = "platform-api"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
nestrs-core.workspace = true
nestrs-authn.workspace = true
nestrs-config.workspace = true
nestrs-authz = { workspace = true, features = ["http", "graphql"] }
nestrs-graphql.workspace = true
nestrs-health.workspace = true
nestrs-http.workspace = true
nestrs-middleware.workspace = true
nestrs-openapi.workspace = true
nestrs-database = { workspace = true, features = ["http", "graphql"] }
nestrs-resource.workspace = true
nestrs-queue.workspace = true
nestrs-schedule.workspace = true
nestrs-server-timing.workspace = true
nestrs-opentelemetry = { workspace = true, features = ["http"] }
features.workspace = true
poem.workspace = true
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
schemars.workspace = true
async-graphql.workspace = true
anyhow.workspace = true
thiserror.workspace = true
validator.workspace = true
uuid.workspace = true
sea-orm.workspace = true
serde_json.workspace = true

[dev-dependencies]
poem = { workspace = true, features = ["test"] }
nestrs-testing = { workspace = true, features = ["opentelemetry", "orm"] }
migrations = { workspace = true }

[lints]
workspace = true
