[package]
name = "platform-auth"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
nestrs-core.workspace = true
nestrs-authn.workspace = true
nestrs-authz.workspace = true
nestrs-config.workspace = true
nestrs-database.workspace = true
nestrs-health.workspace = true
nestrs-http.workspace = true
nestrs-opentelemetry = { workspace = true, features = ["http"] }
nestrs-throttler.workspace = true
features.workspace = true
poem.workspace = true
sea-orm.workspace = true
tokio.workspace = true
serde.workspace = true
schemars.workspace = true
anyhow.workspace = true
uuid.workspace = true
serde_json.workspace = true
validator.workspace = true
tracing.workspace = true

[dev-dependencies]
poem = { workspace = true, features = ["test"] }
nestrs-testing = { workspace = true, features = ["opentelemetry", "orm"] }
migrations = { workspace = true }
base64.workspace = true

[lints]
workspace = true
