[package]
name = "platform-worker"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
nest-rs-core.workspace = true
nest-rs-config.workspace = true
nest-rs-queue.workspace = true
nest-rs-redis.workspace = true
nest-rs-opentelemetry.workspace = true
features.workspace = true
tokio.workspace = true
anyhow.workspace = true

[dev-dependencies]
nest-rs-testing.workspace = true
serde.workspace = true

[lints]
workspace = true
