[package]
name = "publish-assistant"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
nest-rs-core.workspace = true
nest-rs-config.workspace = true
nest-rs-mcp.workspace = true
nest-rs-health.workspace = true
nest-rs-http.workspace = true
nest-rs-server-timing.workspace = true
nest-rs-opentelemetry = { workspace = true, features = ["http"] }
rmcp.workspace = true
poem.workspace = true
tokio.workspace = true
tracing.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
async-trait.workspace = true
validator.workspace = true
reqwest.workspace = true

[dev-dependencies]
nest-rs-testing = { workspace = true, features = ["opentelemetry"] }
serde_json.workspace = true
