[package]
name = "worker"
version = "0.1.0"
edition.workspace = true
publish = false

[dependencies]
nestrs-core.workspace = true
nestrs-config.workspace = true
nestrs-queue.workspace = true
nestrs-schedule.workspace = true
nestrs-telemetry.workspace = true
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
anyhow.workspace = true

[dev-dependencies]
nestrs-testing.workspace = true

[lints]
workspace = true
