[package]
name = "features"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
publish = false
description = "The product's feature library — vertical slices as port + adapter modules (entities, services, controllers, resolvers, gateways). Each feature exposes a core module plus per-transport edge modules; apps compose by listing the edges they serve."

[dependencies]
nest-rs-core.workspace = true
# `#[processor]` (audio queue) emits absolute `::nest_rs_worker::*` paths.
nest-rs-worker.workspace = true
nest-rs-seaorm = { workspace = true, features = ["http", "graphql", "ws"] }
nest-rs-authn.workspace = true
nest-rs-authz = { workspace = true, features = ["http", "graphql"] }
nest-rs-config.workspace = true
nest-rs-graphql.workspace = true
nest-rs-guards.workspace = true
nest-rs-http.workspace = true
nest-rs-interceptors.workspace = true
nest-rs-queue.workspace = true
nest-rs-redis.workspace = true
nest-rs-schedule.workspace = true
nest-rs-throttler.workspace = true
nest-rs-ws.workspace = true
nest-rs-resource.workspace = true
async-graphql.workspace = true
async-trait.workspace = true
poem.workspace = true
tokio.workspace = true
sea-orm.workspace = true
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true
uuid.workspace = true
validator.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio.workspace = true
nest-rs-testing = { workspace = true, features = ["orm"] }
nest-rs-authz.workspace = true
nest-rs-seaorm.workspace = true
async-graphql.workspace = true
sea-orm.workspace = true
uuid.workspace = true
migrations = { workspace = true }
