[package]
name = "nest-rs-authz"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
description = "CASL-style authorization for nestrs: one ability definition driving an access gate, a SeaORM query pre-filter, and response field-masking. Transport bindings (`http`, `graphql`, `mcp`) live behind Cargo features; the database-coupled extractors (`Bind`, `bind`, `LoaderScope`, `WsDataContext`) live in `nest-rs-seaorm` so the engine stays free of a data-layer dependency."


[features]
default = []
# HTTP surface: poem extractors (`Authorize`, `Scope`), the request-scoped
# `AbilityGuard`, and the `RouteResponseShaper` that masks responses
# transparently. The `Bind` route-model extractor lives in
# `nest_rs_seaorm::Bind` (it must use the data layer).
http = [
    "dep:nest-rs-core",
    "dep:nest-rs-http",
    "dep:nest-rs-resource",
    "dep:poem",
]
# GraphQL surface: per-operation bridge (`GraphqlAbilityBridge`), the `ability`
# accessor + `ContextSeed`, and the `authorize` class-level gate. The
# resolver-side `bind` helper and `LoaderScope` live in
# `nest_rs_seaorm::graphql`.
graphql = [
    "dep:nest-rs-core",
    "dep:nest-rs-graphql",
    "dep:nest-rs-middleware",
    "dep:poem",
]
# MCP surface: HTTP operation guard (`McpAbilityBridge`) + `with_request_ability`.
mcp = [
    "dep:nest-rs-core",
    "dep:nest-rs-mcp",
    "dep:nest-rs-middleware",
    "dep:poem",
]
# Enable every transport binding at once — useful for
# `cargo test -p nest-rs-authz --features full`.
full = ["http", "graphql", "mcp"]

[dependencies]
# Engine: always required.
# A rule's condition lowers to `sea_orm::Condition`; in-memory checks read
# columns via `ModelTrait::get`.
sea-orm.workspace = true
# Response masking serializes a model then strips disallowed keys.
serde.workspace = true
serde_json.workspace = true
# The ambient request `Ability` is carried in a `tokio::task_local!`.
tokio.workspace = true

# Optional dependencies — pulled in by the feature flags above.
nest-rs-core = { workspace = true, optional = true }
nest-rs-http = { workspace = true, optional = true }
nest-rs-graphql = { workspace = true, optional = true }
nest-rs-mcp = { workspace = true, optional = true }
nest-rs-middleware = { workspace = true, optional = true }
nest-rs-resource = { workspace = true, optional = true }
poem = { workspace = true, optional = true }

[dev-dependencies]
# Engine-only tests: `tests/ability.rs` builds a throwaway SeaORM entity and
# renders `condition_for` to SQL; the masking tests serialize a model via serde.
sea-orm.workspace = true
serde.workspace = true
# Bridge mirror tests boot the full surface (HTTP + GraphQL); compiled when the
# corresponding feature is enabled (`cargo test -p nest-rs-authz --features full`).
nest-rs-core.workspace = true
nest-rs-http.workspace = true
nest-rs-graphql.workspace = true
nest-rs-resource.workspace = true
nest-rs-testing.workspace = true
# A crate that defines `#[resolver]`s needs `async-graphql` as a direct dep,
# since the generated `#[Object]` code names `async_graphql::` paths.
async-graphql.workspace = true
serde_json.workspace = true
tokio.workspace = true
poem.workspace = true
