[package]
name = "nest-rs-authz"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
description = "CASL-style authorization for nestrs: one ability definition driving an access gate, a SeaORM query pre-filter, and response field-masking. Transport bindings (`http`, `graphql`, `mcp`) live behind Cargo features; the database-coupled extractors (`Bind`, `bind`, `LoaderScope`, `WsDataContext`) live in `nest-rs-seaorm` so the engine stays free of a data-layer dependency."
keywords = ["framework", "nestjs", "authorization", "casl", "rbac"]
categories = ["authentication", "web-programming"]


[features]
default = []
# HTTP surface: poem extractors (`Authorize`, `Scope`), the request-scoped
# `AbilityGuard`, and the `RouteResponseShaper` that masks responses
# transparently. The `Bind` route-model extractor lives in
# `nest_rs_seaorm::Bind` (it must use the data layer). Also activates the
# unified `nest_rs_guards::Guard` impl so `AbilityGuard` can be used both
# per-route and globally via `App::builder().use_guards_global(...)`.
# `AbilityGuard` implements the guard's `check_ws_message` entry (the WS
# upgrade reuses the HTTP guards), so `nest-rs-guards/ws` is forwarded — that
# feature exists only when the guard's WS method does, and it transitively
# turns on the `ws` feature of the sibling layer crates (filters /
# exception-filters / interceptors) so the whole Layer System lines up.
http = [
    "dep:nest-rs-core",
    "dep:nest-rs-http",
    "dep:nest-rs-guards",
    "nest-rs-guards/ws",
    "dep:nest-rs-resource",
    "dep:nest-rs-ws",
    "dep:poem",
]
# GraphQL surface: per-operation bridge (`GraphqlAbilityBridge`), the `ability`
# accessor + `ContextSeed`, and the `authorize` class-level gate. The
# resolver-side `bind` helper and `LoaderScope` live in
# `nest_rs_seaorm::graphql`.
graphql = [
    "dep:nest-rs-core",
    "dep:nest-rs-graphql",
    "nest-rs-guards/graphql",
    "nest-rs-resource/graphql",
    "dep:poem",
]
# MCP surface: the operation-guard ability bridge (`McpAbilityBridge`), which
# runs the guard chain and installs the ambient ability for the operation.
# Masking inside a tool body is the transport-free `masked_output_ambient`. The
# data context that makes `Repo` work inside a tool body is
# `nest_rs_seaorm::McpDataContext`, behind that crate's `mcp` feature.
# `nest-rs-guards/mcp` is forwarded for the same reason the GraphQL binding
# forwards `nest-rs-guards/graphql`: it is what seeds the in-band fallback
# (`GlobalPoolMcpGuard`) so `use_guards_global` reaches `/mcp`.
mcp = [
    "dep:nest-rs-core",
    "dep:nest-rs-mcp",
    "dep:nest-rs-guards",
    "nest-rs-guards/mcp",
    "dep:poem",
]
# Enable every transport binding at once — useful for
# `cargo test -p nest-rs-authz --features full`.
full = ["http", "graphql", "mcp"]

[dependencies]
# Engine: always required.
# A rule's condition lowers to `sea_orm::Condition`; in-memory checks read
# columns via `ModelTrait::get`. `with-chrono` makes the temporal `Value`
# variants exist so the in-memory `Cmp` interpreter can order timestamp
# columns (the dominant scalar-comparison use case) regardless of which
# features the consuming workspace enables.
sea-orm = { workspace = true, features = ["with-chrono"] }
# Response masking serializes a model then strips disallowed keys.
serde.workspace = true
serde_json.workspace = true
# The ambient request `Ability` is carried in a `tokio::task_local!`.
tokio.workspace = true
tracing.workspace = true
# `AbilityBuilder::build` returns a typed error when a rule's relation
# predicate is malformed (the `Deny` sentinel).
thiserror.workspace = true

# Optional dependencies — pulled in by the feature flags above.
nest-rs-core = { workspace = true, optional = true }
nest-rs-http = { workspace = true, optional = true }
nest-rs-graphql = { workspace = true, optional = true }
nest-rs-guards = { workspace = true, optional = true }
nest-rs-mcp = { workspace = true, optional = true }
nest-rs-resource = { workspace = true, optional = true }
nest-rs-ws = { workspace = true, optional = true }
poem = { workspace = true, optional = true }

[dev-dependencies]
# Self dev-dependency: turn on every transport binding for this crate's own
# test targets. Without it `cargo nextest run --workspace` (the Definition of
# done) builds this crate with `default = []`, so every `#[cfg(feature = …)]`
# bridge test in `tests/integration/` compiles away — the http / graphql / mcp
# suites would exist but never run. Dev-deps do not propagate, so no consumer
# gains a feature from this.
nest-rs-authz = { path = ".", features = ["full"] }
# Engine-only tests: `tests/ability.rs` builds a throwaway SeaORM entity and
# renders `condition_for` to SQL; the masking tests serialize a model via serde.
sea-orm.workspace = true
serde.workspace = true
# Bridge mirror tests boot the full surface (HTTP + GraphQL); compiled when the
# corresponding feature is enabled (`cargo test -p nest-rs-authz --features full`).
nest-rs-core = { path = "../nest-rs-core" }
nest-rs-http = { path = "../nest-rs-http" }
nest-rs-graphql = { path = "../nest-rs-graphql" }
nest-rs-guards = { path = "../nest-rs-guards" }
nest-rs-interceptors = { path = "../nest-rs-interceptors" }
nest-rs-resource = { path = "../nest-rs-resource" }
nest-rs-testing = { path = "../nest-rs-testing" }
# A crate that defines `#[resolver]`s needs `async-graphql` as a direct dep,
# since the generated `#[Object]` code names `async_graphql::` paths.
async-graphql.workspace = true
# Same rule for the MCP bridge test's tool host: the rmcp `#[tool_router]` /
# `#[tool_handler]` macros (re-exported by nest-rs-mcp) expand to `rmcp::` paths.
rmcp.workspace = true
serde_json.workspace = true
# The alias pin-test's un-shaped routes emit an OpenAPI response schema, which
# puts a `JsonSchema` bound on their `Json<T>` payloads.
schemars.workspace = true
tokio.workspace = true
poem.workspace = true

[lints]
workspace = true
