[package]
name = "nest-rs-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Scaffolding CLI for nestrs — new projects, feature generators, and project health checks."
keywords = ["framework", "nestjs", "cli", "scaffolding", "generator"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[[bin]]
name = "nestrs"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
# `g migration` stamps the migration filename with today's date.
chrono.workspace = true
clap = { version = "4", features = ["derive", "env"] }
thiserror.workspace = true
toml_edit = "0.25"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
