[package]
name = "nest-rs-config-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Internal — the #[config] decorator macro; re-exported by nest-rs-config, not a direct dependency."

[lib]
proc-macro = true

[dependencies]
syn.workspace = true
quote.workspace = true
proc-macro2.workspace = true
