[package]
name = "nest-rs-config-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Internal — the #[config] decorator macro; re-exported by nest-rs-config, not a direct dependency."
keywords = ["framework", "nestjs", "config", "macros", "proc-macro"]
categories = ["development-tools::procedural-macro-helpers", "config"]

[lib]
proc-macro = true

[dependencies]
syn.workspace = true
quote.workspace = true
proc-macro2.workspace = true
nest-rs-codegen.workspace = true

[lints]
workspace = true
