[package]
name = "nest-rs-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Core building blocks (DI container, module trait, lifecycle, access graph) for the NestRS framework."
keywords = ["framework", "nestjs", "di", "dependency-injection", "ioc"]
categories = ["rust-patterns", "asynchronous"]


[dependencies]
thiserror.workspace = true
nest-rs-core-macros.workspace = true
tokio.workspace = true
tokio-util.workspace = true
async-trait.workspace = true
anyhow.workspace = true
tracing.workspace = true
# Link-time registry: each `#[hooks]` method submits a lifecycle hook so `App`
# composes them at boot with no central list (same mechanism as GraphQL).
inventory.workspace = true
# Request-scope cache lock — poison-free locking off the request hot path.
parking_lot.workspace = true

[dev-dependencies]
tracing-subscriber.workspace = true
# Snapshot-tests the core macro compile diagnostics (`#[injectable]`, `#[module]`)
# — the exact error a developer sees is part of the contract (CORE-I10), the
# same net the http/graphql/ws macros already have.
trybuild.workspace = true

[lints]
workspace = true
