[package]
name = "nest-rs-database"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
description = "ORM-agnostic data-layer seam for NestRS: the ambient request/job Executor task-local plus the object-safe Executor trait an ORM module implements. SeaORM is the first-party implementation (nest-rs-seaorm), and the trait is public so other stores can be written against it."
keywords = ["framework", "nestjs", "database", "orm", "seaorm"]
categories = ["database"]


[dependencies]
# The ambient executor + scope are carried in `tokio::task_local!`s.
tokio.workspace = true

[lints]
workspace = true
