[package]
name = "nest-rs-exception-filters"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Typed exception filters for nestrs — each filter declares the concrete error it claims and only catches matching errors; distinct from the unconditional error-mapping `Filter`."

[features]
default = []
# The reserved `catch_graphql` dispatch names async-graphql's native context /
# error types. Gated so an HTTP-only consumer never compiles the GraphQL stack;
# GraphQL-serving consumers turn it on via `nest-rs-guards/graphql`.
graphql = ["dep:nest-rs-graphql"]
# The reserved `catch_ws` dispatch names `WsClient`. Gated likewise.
ws = ["dep:nest-rs-ws"]

[dependencies]
async-trait.workspace = true
poem.workspace = true
nest-rs-core.workspace = true
# Native context + error types for the cross-transport `catch_graphql` /
# `catch_ws` dispatch (reserved seams; typed downcast over the transport's
# native error). Optional + feature-gated so a pure-HTTP consumer does not pull
# the GraphQL / WS stacks.
nest-rs-graphql = { workspace = true, optional = true }
nest-rs-ws = { workspace = true, optional = true }
# `use_exception_filters_global` attaches its boot-time resolvability check
# via `HttpBootCheck`. Same safe direction as the sibling trait crates.
nest-rs-http.workspace = true
anyhow.workspace = true
serde_json.workspace = true

[lints]
workspace = true
