[package]
name = "nest-rs-exception-filters"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Typed exception filters for NestRS — each filter declares the concrete error it claims and only catches matching errors; distinct from the unconditional error-mapping `Filter`."
keywords = ["framework", "nestjs", "exception", "error-handling", "web"]
categories = ["web-programming", "rust-patterns"]

[dependencies]
async-trait.workspace = true
poem.workspace = true
nest-rs-core.workspace = true
# `use_exception_filters_global` attaches its boot-time resolvability check
# via `HttpBootCheck`. Same safe direction as the sibling trait crates.
nest-rs-http.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
thiserror.workspace = true

[lints]
workspace = true
