[package]
name = "nest-rs-filters"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Transport-spanning error-mapping filters for nestrs — one Layer System sub-trait that turns inner errors into responses on HTTP, GraphQL, and WS, declared globally via `use_filters_global` or per-scope through `#[use_filters]`."

[dependencies]
async-trait.workspace = true
poem.workspace = true
tracing.workspace = true
nest-rs-core.workspace = true
# `use_filters_global` attaches its transport-level wrap via
# `HttpInterceptorMeta`. Safe direction.
nest-rs-http.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
async-trait.workspace = true

[lints]
workspace = true
