[package]
name = "nest-rs-graphql-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Internal — GraphQL decorator macros (#[graphql], #[resolver]); re-exported by nest-rs-graphql, not a direct dependency."
keywords = ["framework", "nestjs", "graphql", "macros", "proc-macro"]
categories = ["development-tools::procedural-macro-helpers"]

[lib]
proc-macro = true

[dependencies]
syn.workspace = true
quote.workspace = true
proc-macro2.workspace = true
nest-rs-codegen.workspace = true

[lints]
workspace = true
